# opencvtest

./: .gitignore  WORKSPACE
image/: 1image.png_1  BUILD.bazel
src/: BUILD.bazel  main.cpp
